# fulgor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: Chorus.h  Comb.h  Delay.h  Ramp.h  RingBuffer.h  SchroederAllpass.h  SchroederReverb.h  gtable.h  midiutils.h  oscillator.h  wave.h
lib/ADSR/: ADSR.cpp  CMakeLists.txt
lib/Chorus/: CMakeLists.txt  Chorus.h
lib/Comb/: CMakeLists.txt  Comb.cpp  Comb.h
lib/Delay/: CMakeLists.txt  Delay.h
lib/FFT/: CMakeLists.txt  FFT.cpp  FFT.h
lib/Ramp/: Ramp.cpp
lib/RingBuffer/: RingBuffer.h
lib/SchroederAllpass/: CMakeLists.txt  SchroederAllpass.cpp  SchroederAllpass.h
lib/SchroederReverb/: CMakeLists.txt  SchroederReverb.h
lib/Wavetable/: Wavetable.cpp  Wavetable.h
src/: ADSR.cpp  Chorus.cpp  Comb.cpp  Delay.cpp  RingBuffer.cpp  SchroederAllpass.cpp  SchroederReverb.cpp  Wavetable.cpp  driver.c  driver.cpp  gtable.c  gtable.cpp  oscillator.cpp  wave.c
